--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,15 @@
-sudo: false
 language: php
+
 php:
   - '5.5.9'
   - '7.0.22'
+
 notifications:
   email: false
+
+before_script:
+  - composer self-update
+  - composer update --prefer-source
+
+script:
+  - composer test
