--- a/composer.json
+++ b/composer.json
@@ -12,10 +12,10 @@
         }
     ],
     "require": {
-        "php": ">=5.6"
+        "php": "^5.6||^7||^8"
     },
     "require-dev": {
-        "phpunit/phpunit": "^5.7"
+        "phpunit/phpunit": "^5.7||^7||^9"
     },
     "autoload": {
         "psr-0": {
