--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "php": "^5.6||^7||^8"
     },
     "require-dev": {
+        "phpmd/phpmd": "^2.8",
         "phpunit/phpunit": "^5.7||^7||^9"
     },
     "autoload": {
@@ -23,6 +24,7 @@
         }
     },
     "scripts": {
-      "test": "phpunit"
+      "test": "phpunit",
+      "lint": "phpmd src,test ansi phpmd.xml"
     }
 }
