--- a/composer.json
+++ b/composer.json
@@ -12,11 +12,11 @@
         }
     ],
     "require": {
-        "php": "^5.6||^7||^8"
+        "php": "^7||^8"
     },
     "require-dev": {
         "phpmd/phpmd": "^2.8",
-        "phpunit/phpunit": "^5.7||^7||^9"
+        "phpunit/phpunit": "^6||^7||^9"
     },
     "autoload": {
         "psr-0": {
