--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
         }
     ],
     "require": {
-        "php": "^7.2||^8"
+        "php": "^8"
     },
     "require-dev": {
         "phpmd/phpmd": "^2.8",
