--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
         "phpunit/phpunit": "^9.6",
         "phpstan/phpstan": "^1.10",
         "phpstan/extension-installer": "^1.4",
-        "phpstan/phpstan-phpunit": "^1.4"
+        "phpstan/phpstan-phpunit": "^1.4",
+        "phpstan/phpstan-deprecation-rules": "^1.2"
     },
     "autoload": {
         "psr-0": {
